Add configuration backup and update inventory for switch management
- Created a new backup configuration file for the switch.
- Updated inventory files to use SSH key authentication instead of passwords.
- Added SSH private and public key files for secure access.
- Modified resetSwitch playbook to print the SSH key file path.
- Introduced a new Jinja2 template for switch configuration.
- Updated VLAN playbook to copy and apply a custom configuration file, followed by a switch reboot.
- Adjusted test playbook to run commands on the switch instead of localhost.

--- a/Ansible/prod/tasks/inventory.ini
+++ b/Ansible/prod/tasks/inventory.ini
@@ -1,2 +1,9 @@
 [switch]
-switch1 ansible_host=192.168.0.2 ansible_user=admin ansible_password=admin ansible_network_os=ios ansible_connection=ansible.netcommon.network_cli ansible_ssh_common_args='-o PreferredAuthentications=password -o PubkeyAuthentication=no'
+switch1 ansible_host=192.168.0.2
+
+[switch:vars]
+ansible_user=admin
+; ansible_network_os=ios
+; ansible_connection=network_cli
+ansible_ssh_private_key_file=./keys/id_rsa # Path to your RSA private key
+ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
