--- a/Ansible/prod/tasks/ansible.cfg
+++ b/Ansible/prod/tasks/ansible.cfg
@@ -3,3 +3,5 @@ lookup_plugins   = ./plugins/lookup
 filter_plugins   = ./plugins/filter
 callback_plugins = ./plugins/callback
 ssh_type = paramiko
+private_key_file = ./keys/id_rsa
+host_key_checking = False
