--- a/Ansible/prod/tasks/inventory.ini
+++ b/Ansible/prod/tasks/inventory.ini
@@ -3,7 +3,7 @@ switch1 ansible_host=192.168.0.2
 
 [switch:vars]
 ansible_user=admin
-; ansible_network_os=ios
-; ansible_connection=network_cli
-ansible_ssh_private_key_file=./keys/id_rsa # Path to your RSA private key
+ansible_network_os=ios
+ansible_connection=network_cli
+ansible_key_file=./keys/id_rsa # Path to your RSA private key
 ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
