--- a/Ansible/prod/inventory.ini
+++ b/Ansible/prod/inventory.ini
@@ -1,5 +1,5 @@
 [switch]
-switch1 ansible_host=192.168.0.2
+switch_host
 
 [switch:vars]
 ansible_user=admin
@@ -7,3 +7,10 @@ ansible_network_os=ios
 ansible_connection=network_cli
 ansible_key_file=./keys/id_rsa # Path to your RSA private key
 ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
+
+
+hostname=switchie
+username=student
+password=secret
+new_ip=192.168.0.2
+old_ip=192.168.0.20
