--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=no_wire
 server.port=8080
+# H2 settings
+spring.datasource.url = jdbc:h2:file:./data/lablink
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=t
+
+# JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# H2 console inschakelen
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
