--- a/Ansible/prod/ansible.cfg
+++ b/Ansible/prod/ansible.cfg
@@ -3,5 +3,5 @@ lookup_plugins   = ./plugins/lookup
 filter_plugins   = ./plugins/filter
 callback_plugins = ./plugins/callback
 ssh_type = paramiko
-private_key_file = ./keys/id_rsa
+private_key_file = ./keys/id_rsa.old
 host_key_checking = False
