--- a/Ansible/prod/reset.inventory.ini
+++ b/Ansible/prod/reset.inventory.ini
@@ -1,13 +1,10 @@
 [switch]
-192.168.0.3
-192.168.0.1
-192.168.0.2
+switch
 
 [switch:vars]
 ansible_user=admin
 ansible_network_os=ios
 ansible_connection=network_cli
-ansible_key_file=./keys/id_rsa # Path to your RSA private key
 ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
 
 
